[CRONAPP-1230] :bug: :wheelchair: focused button not well visible (#189)

--- a/css/themes/custom/material/custom-material.css
+++ b/css/themes/custom/material/custom-material.css
@@ -302,7 +302,7 @@ Material Grid
 }
 
 
-.k-grid tbody .k-button:hover {
+.k-grid tbody .k-button:hover, .k-grid tbody .k-button:focus {
     background-color: #0470a0;
     color:#ffffff;
 }
